# fusion-curation

./: .coveragerc  .env  .eslintrc.json  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Pipfile  Procfile  README.md  build.sh  package-lock.json  package.json  requirements-dev.txt  requirements.txt  setup.cfg
.ebextensions/: 00_app_log.config  00app_log.config  01_build.config  01_build_client.config  01_download_data.config  01_rebuild_dirs.config  02_arrange_dirs.config  02_data_downloads.config  02_download_seqrepo.config  03_data_downloads.config  03_server_deps.config  04_data_downloads.config
.github/workflows/: backend_checks.yml  close_issue.yml  pr-priority-label.yaml
client/: .env.development  .env.production  .eslintrc.js  .eslintrc.json  package-lock.json  package.json  tsconfig.json
client/public/: index.html  manifest.json
client/src/: App.tsx  index.tsx
client/src/components/: CTCompInput.tsx  NavTabs.tsx  Question.tsx  Transcript.tsx
client/src/components/Pages/Assay/: Assay.scss  Assay.tsx
client/src/components/Pages/CausativeEvent/: CausativeEvent.scss  CausativeEvent.tsx
client/src/components/Pages/FusionType/: FusionType.scss  FusionType.tsx
client/src/components/Pages/OtherAttribs/: OtherAttribs.scss  OtherAttribs.tsx
client/src/components/Pages/Questions/: Questions.scss  Questions.tsx
client/src/components/Pages/ReadingFrame/: ReadingFrame.scss  ReadingFrame.tsx
client/src/components/Utilities/: UtilitiesNavTabs.scss  UtilitiesNavTabs.tsx
client/src/components/Utilities/GetCoordinates/: GetCoordinates.scss  GetCoordinates.tsx
client/src/components/Utilities/GetSequence/: GetSequence.tsx
client/src/components/Utilities/GetSequenceIds/: GetSequenceIds.scss  GetSequenceIds.tsx
client/src/components/Utilities/GetTranscripts/: GetTranscripts.scss  GetTranscripts.tsx
client/src/components/Utilities/UtilitiesNavTabs/: UtilitiesNavTabs.scss  UtilitiesNavTabs.tsx
client/src/components/main/About/: About.scss  About.tsx
client/src/contexts/: GeneContext.tsx  ResponseContext.ts  ResponsesContext.ts
client/src/global/contexts/: DomainOptionsContext.tsx  FusionContext.tsx  GeneContext.tsx  SettingsContext.tsx  StructureContext.tsx  SuggestionContext.tsx
client/src/global/styles/: global.scss  theme.ts
client/src/services/: ResponseModels.ts  apiService.ts  main.tsx
client/testAPI/: app.js  data.json  package.json
codebuild/: deploy_eb_env.py  deploy_eb_env_dev.py  terminate_eb_env.py  terminate_eb_env_dev.py
curation/: __init__.py  domain_services.py  gene_services.py  main.py  schemas.py  sequence_services.py  uta_services.py  validation.py  validation_services.py  views.py
curation/client/: package-lock.json  package.json
curation/client/src/: AddComponentButton.jsx  ComponentsCard.jsx  ComponentsForm.jsx  FormParent.js  FormParent.jsx  FormRadio.jsx  FunctionalDomainsForm.js  FunctionalDomainsForm.jsx  ItemTypes.js  JunctionsForm.jsx  ResponseField.js  ResponseField.jsx  SpecificComponentCard.jsx  TranscriptRegionCard.jsx  index.js
curation/data_sources/: uta.py
curation/static/: entry.js
curation/templates/: base.html  entry.html
frontend/: package-lock.json  package.json
frontend/src/: AddComponentButton.jsx  CausEventForm.jsx  Domain.jsx  FormParent.jsx  TranscriptRegionCard.jsx  sample_output.json
public/: index.html
server/: .coveragerc  .flake8  Pipfile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
server/curation/: __init__.py  cli.py  domain_services.py  gene_services.py  main.py  routes.py  schemas.py  sequence_services.py  uta_services.py  validation_services.py  version.py
server/curation/devtools/: __init__.py  build_client_types.py  gene.py  interpro.py
server/curation/routers/: complete.py  components.py  constructors.py  lookup.py  utilities.py  validate.py
server/curation/utils/: __init__.py  build_client_types.py  gene.py  interpro.py
server/curfu/: __init__.py  cli.py  domain_services.py  gene_services.py  main.py  schemas.py  sequence_services.py  utils.py  version.py
server/curfu/data/: domain_lookup_2022-01-20.tsv  gene_aliases_suggest_20220920.tsv  gene_prev_symbols_suggest_20220920.tsv
server/curfu/devtools/: __init__.py  build_client_types.py  build_gene_suggest.py  build_interpro.py  gene.py  interpro.py
server/curfu/routers/: __init__.py  complete.py  constructors.py  demo.py  lookup.py  meta.py  nomenclature.py  utilities.py  validate.py
server/src/curfu/: __init__.py  cli.py  domain_services.py  gene_services.py  main.py  schemas.py  sequence_services.py  utils.py
server/src/curfu/devtools/: __init__.py  build_client_types.py  build_gene_suggest.py  build_interpro.py
server/src/curfu/routers/: __init__.py  complete.py  constructors.py  demo.py  lookup.py  meta.py  nomenclature.py  utilities.py  validate.py
server/tests/: conftest.py
server/tests/integration/: test_complete.py  test_constructors.py  test_demos.py  test_lookup.py  test_main.py  test_nomenclature.py  test_routes.py  test_utilities.py  test_validate.py
server/tests/unit/: test_domain.py  test_gene.py  test_routes.py  test_sequence_services.py  test_uta.py  test_validate.py
src/: AddButton.jsx  AddComponentButton.jsx  AddDomainButton.jsx  CausEventForm.jsx  Component.jsx  ComponentsCard.jsx  ComponentsForm.jsx  Domain.jsx  DomainsForm.jsx  DraggableComponentWrapper.jsx  FormParent.jsx  FormRadio.jsx  GeneCard.jsx  GeneComponent.jsx  GenomicRegionCard.jsx  GenomicRegionComponent.jsx  ItemTypes.js  LinkerSequenceCard.jsx  LinkerSequenceComponent.jsx  MainPage.jsx  NumericTextField.jsx  RadioOption.jsx  RegulatoryElement.jsx  RegulatoryElementsForm.jsx  ResponseField.jsx  ResultField.jsx  SpecificComponent.jsx  SpecificComponentCard.jsx  SubmitButton.jsx  TranscriptRegionComponent.jsx  TranscriptSegmentComponent.jsx  UnknownComponent.jsx  UnknownGeneComponent.jsx  index.js
tests/: conftest.py
tests/unit/: test_domain.py  test_gene.py  test_sequence_services.py  test_services.py  test_uta.py  test_validate.py
(+155 files in other folders)
