[metadata]
name = fusion-curation
description = Curation tool for gene fusions
long_description = file:README.md
long_description_content_type = text/markdown
author = Wagner Lab, Nationwide Childrens Hospital
license = MIT

[options]
packages = find:
python_requires = >=3.7
zip_safe = False
include_package_data = True

install_requires =
    flask
    gene-normalizer >= 0.1.11
    boto3

tests_require =
    pytest
    pytest-cov

[tool:pytest]
addopts = --ignore setup.py --ignore codebuild --doctest-modules --cov-report term-missing --cov .
