[project]
name = "curfu"
authors = [
    {name = "Alex Wagner", email = "alex.wagner@nationwidechildrens.org"},
    {name = "Kori Kuzma", email = "kori.kuzma@nationwidechildrens.org"},
    {name = "James Stevenson", email = "james.stevenson@nationwidechildrens.org"},
    {name = "Katie Stahl", email = "kathryn.stahl@nationwidechildrens.org"},
    {name = "Jeremy Arbesfeld", email = "jeremy.arbesfeld@nationwidechildrens.org"}
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
description = "Curation tool for gene fusions"
dependencies = [
    "fastapi >= 0.72.0",
    "aiofiles",
    "asyncpg",
    "fusor ~= 0.0.30-dev1",
    "sqlparse >= 0.4.2",
    "urllib3 >= 1.26.5",
    "click",
    "jinja2",
    "boto3",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-asyncio >= 0.19.0",
    "pytest-cov",
    "coverage",
    "httpx",
]
dev = [
    "psycopg2-binary",
    "ruff",
    "black",
    "pre-commit>=3.7.1",
    "gene-normalizer ~= 0.1.39",
    "pydantic-to-typescript",
]

[project.scripts]
curfu_devtools = "curfu.cli:devtools"
curfu = "curfu.cli:serve"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
root = "../."

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report term-missing"
testpaths = ["tests"]

[tool.black]
line-length = 88

[tool.ruff]
# pycodestyle (E, W)
# Pyflakes (F)
# flake8-annotations (ANN)
# flake8-quotes (Q)
# pydocstyle (D)
# pep8-naming (N)
# isort (I)
select = ["E", "W", "F", "ANN", "Q", "D", "N", "I"]

fixable = ["I"]

# D205 - blank-line-after-summary
# D400 - ends-in-period
# D415 - ends-in-punctuation
# ANN101 - missing-type-self
# ANN003 - missing-type-kwargs
# E501 - line-too-long
ignore = ["D205", "D400", "D415", "ANN101", "ANN003", "E501"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.per-file-ignores]
# ANN001 - missing-type-function-argument
# ANN2 - missing-return-type
# ANN102 - missing-type-cls
# N805 - invalid-first-argument-name-for-method
# F821 - undefined-name
# F401 - unused-import
"tests/*" = ["ANN001", "ANN2", "ANN102"]
"setup.py" = ["F821"]
"*__init__.py" = ["F401"]
"curfu/schemas.py" = ["ANN201", "N805", "ANN001"]
"curfu/routers/*" = ["D301"]
"curfu/cli.py" = ["D301"]
