[metadata]
name = fusion-curation
description = Curation tool for gene fusions
long_description = file:README.md
long_description_content_type = text/markdown
author = Wagner Lab, Nationwide Childrens Hospital
license = MIT

[options]
packages = find:
python_requires = >=3.8
zip_safe = False
include_package_data = True

install_requires =
    fastapi >= 0.72.0
    aiofiles
    asyncpg
    gene-normalizer >= 0.1.27
    uta-tools >= 0.1.0
    fusor >= 0.0.19
    sqlparse >= 0.4.2
    websockets >= 9.1
    uvloop
    httptools
    urllib3 >= 1.26.5
    click

[options.extras_require]
tests =
    pytest
    pytest-asyncio
    pytest-cov
    coverage
    httpx

dev =
    flake8
    flake8-docstrings
    black
    pre-commit
    pydantic-to-typescript


[options.entry_points]
console_scripts =
    fc_devtools = curation.cli:devtools
    fc_serve = curation.cli:serve

[tool:pytest]
addopts = --disable-warnings --cov-report term-missing --cov-config=.coveragerc --cov=curation
