[metadata]
name = curfu
description = Curation tool for gene fusions
long_description = file:README.md
long_description_content_type = text/markdown
author = Wagner Lab, Nationwide Childrens Hospital
license = MIT

[options]
packages = find:
python_requires = >=3.8
zip_safe = False
include_package_data = True

install_requires =
    fastapi >= 0.72.0
    aiofiles
    asyncpg
    gene-normalizer == 0.1.27
    uta-tools >= 0.1.0
    fusor >= 0.0.23
    sqlparse >= 0.4.2
    websockets >= 9.1
    uvloop
    httptools
    urllib3 >= 1.26.5
    click
    jinja2

[options.extras_require]
tests =
    pytest
    pytest-asyncio >= 0.19.0
    pytest-cov
    coverage
    httpx

dev =
    psycopg2-binary
    flake8
    flake8-docstrings
    black
    pre-commit
    pydantic-to-typescript


[options.entry_points]
console_scripts =
    curfu_devtools = curfu.cli:devtools
    curfu = curfu.cli:serve

[tool:pytest]
addopts = --disable-warnings --cov-report term-missing --cov-config=.coveragerc --cov=curfu
asyncio_mode = auto
