[metadata]
name = curfu
description = Curation tool for gene fusions
long_description = file:README.md
long_description_content_type = text/markdown
author = Wagner Lab, Nationwide Childrens Hospital
license = MIT

[options]
packages = find:
python_requires = >=3.8
zip_safe = False
include_package_data = True

install_requires =
    fastapi >= 0.72.0
    aiofiles
    asyncpg
    fusor ~= 0.0.28-dev0
    sqlparse >= 0.4.2
    urllib3 >= 1.26.5
    click
    jinja2
    boto3

[options.extras_require]
tests =
    pytest
    pytest-asyncio >= 0.19.0
    pytest-cov
    coverage
    httpx

dev =
    psycopg2-binary
    ruff
    black
    pre-commit
    gene-normalizer ~= 0.1.39
    pydantic-to-typescript


[options.entry_points]
console_scripts =
    curfu_devtools = curfu.cli:devtools
    curfu = curfu.cli:serve

[tool:pytest]
addopts = --disable-warnings --cov-report term-missing --cov-config=.coveragerc --cov=curfu
asyncio_mode = auto
